[package]
name = "globa_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.27"
egui-wgpu = "0.27"
wgpu = "0.19"
bytemuck = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
image = "0.24"
epaint = "0.27"
log = "0.4"
